Update maven plugins, compile with JDK 11